# fits-well

./: CLAUDE.md  Cargo.toml  README.md  todo.txt
benches/: compress.rs  decode.rs  read.rs
docs/: ROADMAP.md  conformance.md
docs/refs/: 01-file-structure.md  02-headers-keywords.md  03-data-representation.md  04-images.md  05-ascii-tables.md  06-binary-tables.md  07-wcs-time-compression.md  README.md  fits_standard40.md
examples/: compression.rs  image.rs  read_write.rs  table.rs  time.rs  wcs.rs
src/: bitpix.rs  block.rs  checksum.rs  complex.rs  compress.rs  data.rs  endian.rs  error.rs  hdu.rs  lib.rs  reader.rs  table.rs  writer.rs
src/ascii/: mod.rs  tests.rs
src/compress/: gzip.rs  hcompress.rs  mod.rs  plio.rs  quantize.rs  rice.rs  table.rs  tests.rs
src/data/: mod.rs  tests.rs
src/groups/: mod.rs  tests.rs
src/hdu/: mod.rs  tests.rs
src/header/: card.rs  mod.rs  tests.rs  value.rs
src/header/card/: mod.rs  tests.rs
src/reader/: mod.rs  source.rs  tests.rs
src/table/: mod.rs  tests.rs
src/time/: mod.rs  tests.rs
src/wcs/: frame.rs  mod.rs  tests.rs
src/writer/: mod.rs  tests.rs
tests/data/fits/: comp_dither2_f32.fits  comp_gzip2_i16.fits  comp_hcomp_i16.fits  comp_hcomp_lossy.fits  comp_hcomp_smooth.fits  comp_nan_f32.fits  comp_plio_i32.fits  comp_ref_dither2_f32.fits  comp_ref_f32.fits  comp_ref_hcomp_lossy.fits  comp_ref_hcomp_smooth.fits  comp_ref_nan_f32.fits  comp_ref_quant_f32.fits  comp_ricef_nodither.fits  comp_ricef_quant.fits  comp_table_vla.fits
