[package]
name = "fits-well"
version = "0.1.0"
edition = "2024"
description = "A blazing-fast reader and writer for FITS (Flexible Image Transport System) files, targeting the full FITS 4.0 standard."
license = "MIT OR Apache-2.0"
repository = "https://github.com/xorza/fits"
keywords = ["fits", "astronomy", "image", "fileformat"]
categories = ["science", "parser-implementations"]

[dependencies]
flate2 = { version = "1.1", optional = true }
rayon = { version = "1", optional = true }
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
criterion = "0.8"

[features]
default = ["parallel", "compression"]
# rayon-backed tile-parallel (de)compression — the codecs are compute-bound and
# tiles are independent, so this scales near-linearly. Scalar fallback otherwise.
# (The raw byte-swap / BSCALE-BZERO paths are memory-bound; SIMD is their lever,
# not threads, so they are deliberately not parallelized.) Implies `compression`,
# since the codecs are the only thing parallelized.
parallel = ["compression", "dep:rayon"]
# memory-mapped read sources (via memmap2) for zero-copy access over large files:
# data units decode straight from the mapped pages, skipping the staging copy.
mmap = ["dep:memmap2"]
# tiled image + table (de)compression: all five image codecs (GZIP_1, GZIP_2,
# RICE_1, PLIO_1, HCOMPRESS_1) plus §10.3 tables. Pulls in flate2 for the gzip
# codecs. The WCS (§8) and time (§9) layers are dependency-free and always compiled.
compression = ["dep:flate2"]
# Re-expose the hot internal decode/encode entry points for microbenchmarks only.
# NOT a stable API surface — the benches under `benches/` enable it.
internals = []

# Throughput benchmarks: `cargo bench --features internals`. The data unit is
# black-boxed and tagged with `Throughput::Bytes`, so results read in GiB/s and are
# directly comparable to memory bandwidth.
[[bench]]
name = "decode"
harness = false
required-features = ["internals"]

# Compression-codec throughput (`cargo bench --features compression --bench compress`),
# reported in uncompressed bytes/s so it's comparable to the raw `decode` numbers.
[[bench]]
name = "compress"
harness = false
required-features = ["compression"]

# Read-path throughput: seeking (copy-into-scratch) vs in-memory borrow. Uses only
# the public API; the mmap arm is `#[cfg]`-gated on the `mmap` feature.
[[bench]]
name = "read"
harness = false
